--- a/main.css
+++ b/main.css
@@ -86,9 +86,9 @@ a {
 
 .search i {
   position: absolute;
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
-  left: 10px;
+  left: -30px;
   padding-right: 10px;
   color: #ffffff;
   border-right: 1px solid #ffffff;
@@ -219,7 +219,7 @@ a {
 .carousel {
   position: relative;
   height: 550px;
-  perspective: 1500;
+  perspective: 1500px;
 }
 
 .carousel .carousel-item {
@@ -282,4 +282,41 @@ a {
 
 .src a:hover {
   color: var(--primary-color);
+}
+
+.trailer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.trailer.active {
+  visibility: visible;
+  opacity: 1;
+  transition: 0.3s;
+}
+
+.trailer video {
+  max-width: 900px;
+  outline: none;
+}
+
+.close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+  filter: invert(1);
+  max-width: 30px;
 }
